--- a/index.html
+++ b/index.html
@@ -184,6 +184,27 @@
     footer{margin-top:18px;color:rgba(184,169,198,.9);font-size:12px;line-height:1.7;}
     a{color:var(--gold);text-decoration:none;}
     a:hover{text-decoration:underline;}
+ .link-list{
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+  margin-top:16px;
+}
+.link-btn{
+  display:block;
+  text-align:center;
+  padding:14px 16px;
+  border-radius:12px;
+  border:1px solid rgba(215,180,106,.35);
+  color:#f3eef7;
+  text-decoration:none;
+  letter-spacing:.08em;
+  background:rgba(13,11,16,.6);
+}
+
+.link-btn:hover{
+  background:rgba(215,180,106,.12);
+}
   </style>
 </head>
 
@@ -268,6 +289,28 @@
 
       <div id="out" class="result" style="display:none"></div>
     </section>
+    <section class="deep-section">
+  <h3>DEEP LOVERS LAB｜Links</h3>
+
+  <p class="deep-note">
+    深くつながる前に、<br>
+    まずは「感情の構造」を知るところから。
+  </p>
+
+  <div class="link-list">
+    <a href="https://note.com/deep_lovers_lab" target="_blank" class="link-btn">
+      📖 note｜無料記事を読む
+    </a>
+
+    <a href="https://example.com/menu" target="_blank" class="link-btn">
+      💎 鑑定MENU
+    </a>
+
+    <a href="https://instagram.com/deep.lovers.lab" target="_blank" class="link-btn">
+      💬 Instagram｜DM相談はこちら
+    </a>
+  </div>
+</section>
 
     <footer>
       <div class="hr"></div>
