--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     </a>
 
     <a href="https://instagram.com/deep.lovers.lab" target="_blank" class="link-btn">
-      💬 Instagram｜DM相談はこちら
+      💬 Instagram｜今の関係を整理したい方はこちら
     </a>
   </div>
 </section>
