--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       💎 鑑定MENU
     </a>
 
-    <a href="https://instagram.com/deep.lovers.lab" target="_blank" class="link-btn">
+    <a href="https://instagram.com/deep_lovers_lab" target="_blank" class="link-btn">
       💬 Instagram｜今の関係を整理したい方はこちら
     </a>
   </div>
