--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Moon Sign | DEEP LOVERS LAB</title>
-
+<!-- OGP -->
+<meta property="og:title" content="月星座で知る「荒れない関係の扱い方」" />
+<meta property="og:description" content="感情のズレは、直すものじゃない。どう扱えば荒れないかを知るための月星座ホロスコープ。" />
+<meta property="og:image" content="https://deeploverslab.github.io/moon-sign/ogp.jpg" />
+<meta property="og:url" content="https://deeploverslab.github.io/moon-sign/" />
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="DEEP LOVERS LAB" />
   <!-- Astronomy Engine (browser build) -->
   <script src="https://unpkg.com/astronomy-engine@2.1.19/astronomy.browser.min.js"></script>
 
