--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- OGP -->
 <meta property="og:title" content="月星座で知る「荒れない関係の扱い方」" />
 <meta property="og:description" content="感情のズレは、直すものじゃない。どう扱えば荒れないかを知るための月星座ホロスコープ。" />
-<meta property="og:image" content="https://deeploverslab.github.io/moon-sign/ogp.jpg" />
+<meta property="og:image" content="https://deeploverslab.github.io/moon-sign/ogp.jpg.jpeg" />
 <meta property="og:url" content="https://deeploverslab.github.io/moon-sign/" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="DEEP LOVERS LAB" />
